Update harmony json parser

--- a/harmony-0.9/web/index.html
+++ b/harmony-0.9/web/index.html
@@ -860,7 +860,7 @@
     for (const slice of currentProcess.slices) {
       duration += slice.duration;
       if (duration >= time) {
-        currentSlice = slice.values;
+        currentSlice = slice.shared_values;
         currentUid = slice.uid
         break;
       }
